--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <button id="btnPlus3" onclick="add3()">+3</button>
             </div>
             <div>
-                <h3 class="stats">AWAY</h3> 
+                <h3 class="stats">GUEST</h3> 
                 <h2 class="score" id="guest-score">0</h2>
                 <button id="btnPlus1" onclick="add1Guest()">+1</button>
                 <button id="btnPlus2" onclick="add2Guest()">+2</button>
